--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ li{
   cursor: pointer;
   display: inline-flex;
   font-family: "JetBrains Mono",monospace;
+  width: 120px;
   height: 35px;
   justify-content: center;
   line-height: 1;
@@ -84,7 +85,7 @@ li{
 }
 
 .button-29:hover {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #6c6d72 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #5b5b5f 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
@@ -123,20 +124,22 @@ li{
 
 .social-networks{
     
-    margin: 40px auto;
-    width: 550px;
-
     
+    width: 550px;
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px; 
+    margin: 40px 20px 40px 20px;
 }
 .button_transition{
     margin: 30px 0px;
 
 }
 .img-container {
-    width: 70px;
-    
+    width: 10vw;
+    max-width: 70px; 
+    height: auto; 
     border-radius: 50%;
     box-shadow: #111111d7 0px 2px 40px 4px;
     display: flex;
@@ -169,7 +172,7 @@ li{
     .img-container {
       width: 50px;
       height: 50px;
-      box-shadow: rgba(0, 0, 0, 0.26) 0px 12px 30px 3px;
+      box-shadow: #111111d7 0px 2px 40px 4px;
     }
   
     .content {
