--- a/style.css
+++ b/style.css
@@ -109,11 +109,11 @@ li{
 
 
 .logo{
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 20px;
     width: auto;
     height: 40px;
-    background: linear-gradient(135deg, #acc9ff,#88c3da,#bedcf8 );
+    background: linear-gradient(135deg, #acc9ff,#96d9f3,#bedcf8 );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-transform: uppercase;
